cxx/src/rsffi/base.h

typedef struct {
    bool owned;
    bool valid;

    bool headComplete;
    bool bodyComplete;

    FfiSlice path;
    uint8_t method;
    uint8_t version;
    FfiSlice methodStr;

    size_t headersLen;
    size_t headersCap;
    HeaderPair* headers;
    FfiSlice body;

    FfiSlice host;
    FfiSlice scheme;
} HttpClient;
// server

void tcp_server_new(FfiFuture fut, char* addr_cstr);     // resolves in FfiServer
FfiServer tcp_server_from_fd(int fd);
void tcp_server_accept(FfiFuture fut, FfiServer server); // resolves in FfiBundle
// void server_loop(FfiFuture fut, FfiServer server, void (*cb)(FfiBundle));
void tcp_server_free(FfiFuture fut, FfiServer server); // detect wether tls, http2 preface, or rest
bool addr_is_ipv4(SockAddre bundle);
bool addr_is_ipv6(SockAddre bundle);
FfiSlice get_addr_str(SockAddre bundle);  // manual free
void tcp_detect_prot(FfiFuture fut, FfiStream bundle); // detect wether tls, http2 preface, or rest
FfiSocket http1_new(FfiStream bundle, size_t bufsize);
uint8_t http_get_type(FfiSocket http); // http type
void http_read_client(FfiFuture fut, FfiSocket http);              // resolves in nothing
void http_read_until_complete(FfiFuture fut, FfiSocket http);      // nothing
void http_read_until_head_complete(FfiFuture fut, FfiSocket http); // nothing
void http_set_header(FfiSocket http, HeaderPair pair);
void http_add_header(FfiSocket http, HeaderPair pair);
void http_del_header(FfiSocket http, FfiSlice name);
void http_write(FfiFuture fut, FfiSocket http, FfiSlice bytes); // resolves in nothing
void http_close(FfiFuture fut, FfiSocket http, FfiSlice bytes); // nothing
void http_flush(FfiFuture fut, FfiSocket http);                 // nothing
HttpClient* http_get_fficlient(FfiSocket http); // manual free
void http_free_fficlient(HttpClient* client);
uint8_t http_client_get_method(FfiSocket http);
FfiSlice http_client_get_method_str(FfiSocket http);
FfiSlice http_client_get_path(FfiSocket http);
uint8_t http_client_get_version(FfiSocket http); // client version (like http type but includes 0.9, 1.0, unknown (type 1 only), and debug)
bool http_client_has_header(FfiSocket http, FfiSlice name);
size_t http_client_has_header_count(FfiSocket http, FfiSlice name);
FfiSlice http_client_get_first_header(FfiSocket http, FfiSlice name);
FfiSlice http_client_get_header(FfiSocket http, FfiSlice name, size_t index);
FfiSlice http_client_get_body(FfiSocket http);
void http_free(FfiSocket http);
void http1_direct_write(FfiFuture fut, FfiSocket http, FfiSlice bytes); // resolves in nothing
void http1_websocket(FfiFuture fut, FfiSocket http);          // resolves in WebSocket
void http1_h2c(FfiFuture fut, FfiSocket http);                // resolves in Http2Session
void http1_h2_prior_knowledge(FfiFuture fut, FfiSocket http); // resolves in Http2Session