cxx/src/rsffi/http2.h

typedef void* Http2Sess;
void http2_send_data(FfiFuture fut, Http2Sess session, int stream_id, bool end, FfiSlice buf);
void http2_send_headers(FfiFuture fut, Http2Sess session, int stream_id, bool end, HeaderPair* headers, size_t length);
void http2_send_priority(FfiFuture fut, Http2Sess session, int stream_id, int dependency, uint8_t weight);
void http2_send_rst_stream(FfiFuture fut, Http2Sess session, int stream_id, int code);
void http2_send_settings(FfiFuture fut, Http2Sess session, FfiSlice settings);
void http2_send_settings_default(FfiFuture fut, Http2Sess session);
void http2_send_settings_default_no_push(FfiFuture fut, Http2Sess session);
void http2_send_settings_maximum(FfiFuture fut, Http2Sess session);
void http2_send_push_promise(FfiFuture fut, Http2Sess session, int associate_id, int promise_id, HeaderPair* headers, size_t length);
void http2_send_ping(FfiFuture fut, Http2Sess session, bool ack, FfiSlice buf);
void http2_send_goaway(FfiFuture fut, Http2Sess session, int stream_id, int code, FfiSlice message);
FfiReques http2_client_handler(Http2Sess session, int stream_id);
FfiSocket http2_server_handler(Http2Sess session, int stream_id);