rust/src/definitions.rs


    pub unsafe fn http2_send_data(fut: *const FfiFuture, session: *const DynH2Sess, stream_id: u32, end: bool, buf: FfiSlice);
    pub unsafe fn http2_send_headers(fut: *const FfiFuture, session: *const DynH2Sess, stream_id: u32, end: bool, headers: *const FfiHeaderPair, length: usize);
    pub unsafe fn http2_send_priority(fut: *const FfiFuture, session: *const DynH2Sess, stream_id: u32, dependency: u32, weight: u8);
    pub unsafe fn http2_send_rst_stream(fut: *const FfiFuture, session: *const DynH2Sess, stream_id: u32, code: u32);
    pub unsafe fn http2_send_settings(fut: *const FfiFuture, session: *const DynH2Sess, settings: FfiSlice);
    pub unsafe fn http2_send_settings_default(fut: *const FfiFuture, session: *const DynH2Sess);
    pub unsafe fn http2_send_settings_default_no_push(fut: *const FfiFuture, session: *const DynH2Sess);
    pub unsafe fn http2_send_settings_maximum(fut: *const FfiFuture, session: *const DynH2Sess);
    pub unsafe fn http2_send_push_promise(fut: *const FfiFuture, session: *const DynH2Sess, associate_id: u32, promise_id: u32, headers: *const FfiHeaderPair, length: usize);
    pub unsafe fn http2_send_ping(fut: *const FfiFuture, session: *const DynH2Sess, ack: bool, buf: FfiSlice);
    pub unsafe fn http2_send_goaway(fut: *const FfiFuture, session: *const DynH2Sess, stream_id: u32, code: u32, buf: FfiSlice);

    pub unsafe fn http2_client_handler(session: *const DynH2Sess, stream_id: u32) -> *mut DynHttpRequest;
    pub unsafe fn http2_server_handler(session: *const DynH2Sess, stream_id: u32) -> *mut DynHttpSocket;

    pub unsafe fn tcp_server_new(fut: *const FfiFuture<TcpListener>, string: *mut c_char);
    pub unsafe fn tcp_server_from_fd(fd: i32) -> *mut TcpListener;
    pub unsafe fn tcp_server_free(listener: *mut TcpListener);
    pub unsafe fn tcp_server_accept(fut: *const FfiFuture<FfiBundle>, server: *mut TcpListener);

    pub unsafe fn addr_is_ipv4(addr: *const SocketAddr) -> bool;
    pub unsafe fn addr_is_ipv6(addr: *const SocketAddr) -> bool;
    pub unsafe fn get_addr_str(addr: *const SocketAddr) -> FfiSlice;
    pub unsafe fn tcp_detect_prot(fut: *const FfiFuture<u8>, stream: *mut DynStream);

    pub unsafe fn http1_new(ffi: *mut DynStream, bufsize: usize) -> *mut DynHttpSocket;
    pub unsafe fn http_get_type(http: *mut DynHttpSocket) -> u8;
    pub unsafe fn http_read_client(fut: *const FfiFuture, http: *mut DynHttpSocket);
    pub unsafe fn http_read_until_complete(fut: *const FfiFuture, http: *mut DynHttpSocket);
    pub unsafe fn http_read_until_head_complete(fut: *const FfiFuture, http: *mut DynHttpSocket);
    pub unsafe fn http_set_header(http: *mut DynHttpSocket, pair: FfiHeaderPair);
    pub unsafe fn http_add_header(http: *mut DynHttpSocket, pair: FfiHeaderPair);
    pub unsafe fn http_del_header(http: *mut DynHttpSocket, name: FfiSlice);
    pub unsafe fn http_write(fut: *const FfiFuture, http: *mut DynHttpSocket, buf: FfiSlice);
    pub unsafe fn http_close(fut: *const FfiFuture, http: *mut DynHttpSocket, buf: FfiSlice);
    pub unsafe fn http_flush(fut: *const FfiFuture, http: *mut DynHttpSocket);
    pub unsafe fn http_free(http: *mut DynHttpSocket);

    pub unsafe fn http_get_fficlient(http: *mut DynHttpSocket) -> *mut FfiClient;
    pub unsafe fn http_free_fficlient(client: *mut FfiClient);
    pub unsafe fn http_client_get_method(http: *mut DynHttpSocket) -> u8;
    pub unsafe fn http_client_get_method_str(http: *mut DynHttpSocket) -> FfiSlice;
    pub unsafe fn http_client_get_path(http: *mut DynHttpSocket) -> FfiSlice;
    pub unsafe fn http_client_get_version(http: *mut DynHttpSocket) -> u8;
    pub unsafe fn http_client_has_header(http: *mut DynHttpSocket, name: FfiSlice) -> bool;
    pub unsafe fn http_client_has_header_count(http: *mut DynHttpSocket, name: FfiSlice) -> usize;
    pub unsafe fn http_client_get_first_header(http: *mut DynHttpSocket, name: FfiSlice) -> FfiSlice;
    pub unsafe fn http_client_get_header(http: *mut DynHttpSocket, name: FfiSlice, index: usize) -> FfiSlice;
    pub unsafe fn http_client_get_body(http: *mut DynHttpSocket) -> FfiSlice;

    pub unsafe fn http1_direct_write(fut: *const FfiFuture, http: *mut DynHttpSocket, buf: FfiSlice);
    pub unsafe fn http1_websocket(fut: *const FfiFuture<DynWebSocket>, http: *mut DynHttpSocket);
    pub unsafe fn http1_h2c(fut: *const FfiFuture<DynH2Sess>, http: *mut DynHttpSocket);
    pub unsafe fn http1_h2_prior_knowledge(fut: *const FfiFuture<DynH2Sess>, http: *mut DynHttpSocket);

    pub unsafe fn tls_config_single_cert_pem(certs: FfiSlice, key: FfiSlice, alpns: *mut c_char) -> *const c_void; // ServerConfig
    pub unsafe fn tls_config_sni_builder() -> *const c_void; // TlsCertSelector
    pub unsafe fn tls_config_sni_builder_with_pem(def_certs: FfiSlice, def_key: FfiSlice) -> *const c_void; // TlsCertSelector
    pub unsafe fn tls_config_sni_add_pem(sni_build: *const c_void, domain: *mut c_char, certs: FfiSlice, key: FfiSlice) -> bool;
    pub unsafe fn tls_config_sni_builder_build(sni_build: *const c_void, alpns: *mut c_char) -> *const c_void; // ServerConfig
    pub unsafe fn tls_config_free(conf: *const c_void);
    pub unsafe fn tcp_upgrade_tls(fut: *const FfiFuture<DynStream>, stream: *mut DynStream, conf: *const c_void);

    pub unsafe fn create_duplex(bufsize: usize) -> FfiDuoStream;
    pub unsafe fn tcp_from_fd(fd: i32) -> *mut DynStream;
    pub unsafe fn unix_from_fd(fd: i32) -> *mut DynStream;
    pub unsafe fn tcp_to_fd(fd: *mut DynStream) -> *mut i32;
    pub unsafe fn unix_to_fd(fd: *mut DynStream) -> *mut i32;

    pub unsafe fn tcp_peek(fut: *const FfiFuture<usize>, ffi: *mut DynStream, buf: *mut FfiSlice);
    pub unsafe fn tls_get_alpn(stream: *mut DynStream) -> FfiSlice;
    pub unsafe fn stream_get_type(stream: *mut DynStream) -> u8;
    pub unsafe fn stream_read(fut: *const FfiFuture<usize>, stream: *mut DynStream, buf: *mut FfiSlice);
    pub unsafe fn stream_read_exact(fut: *const FfiFuture<usize>, stream: *mut DynStream, buf: *mut FfiSlice);
    pub unsafe fn stream_write(fut: *const FfiFuture<usize>, stream: *mut DynStream, buf: *mut FfiSlice);
    pub unsafe fn stream_write_all(fut: *const FfiFuture<usize>, stream: *mut DynStream, buf: *mut FfiSlice);
    pub unsafe fn stream_flush(fut: *const FfiFuture, stream: *mut DynStream);
    pub unsafe fn stream_shutdown(fut: *const FfiFuture, stream: *mut DynStream);
    pub unsafe fn stream_free(stream: *mut DynStream);

    pub unsafe fn websocket_read_frame(fut: *const FfiFuture<FfiWsFrame>, ws: *mut DynWebSocket);
    pub unsafe fn websocket_free_frame(frame: *mut FfiWsFrame);
    pub unsafe fn websocket_flush(fut: *const FfiFuture, ws: *mut DynWebSocket);
    pub unsafe fn websocket_free(ws: *mut DynWebSocket);
    pub unsafe fn websocket_send_continuation(fut: *const FfiFuture, ws: *mut DynWebSocket, buf: FfiSlice);
    pub unsafe fn websocket_send_continuation_masked(fut: *const FfiFuture, ws: *mut DynWebSocket, buf: FfiSlice);
    pub unsafe fn websocket_send_continuation_frag(fut: *const FfiFuture, ws: *mut DynWebSocket, buf: FfiSlice);
    pub unsafe fn websocket_send_continuation_masked_frag(fut: *const FfiFuture, ws: *mut DynWebSocket, buf: FfiSlice);
    pub unsafe fn websocket_send_text(fut: *const FfiFuture, ws: *mut DynWebSocket, buf: FfiSlice);
    pub unsafe fn websocket_send_text_masked(fut: *const FfiFuture, ws: *mut DynWebSocket, buf: FfiSlice);
    pub unsafe fn websocket_send_text_frag(fut: *const FfiFuture, ws: *mut DynWebSocket, buf: FfiSlice);
    pub unsafe fn websocket_send_text_masked_frag(fut: *const FfiFuture, ws: *mut DynWebSocket, buf: FfiSlice);
    pub unsafe fn websocket_send_binary(fut: *const FfiFuture, ws: *mut DynWebSocket, buf: FfiSlice);
    pub unsafe fn websocket_send_binary_masked(fut: *const FfiFuture, ws: *mut DynWebSocket, buf: FfiSlice);
    pub unsafe fn websocket_send_binary_frag(fut: *const FfiFuture, ws: *mut DynWebSocket, buf: FfiSlice);
    pub unsafe fn websocket_send_binary_masked_frag(fut: *const FfiFuture, ws: *mut DynWebSocket, buf: FfiSlice);
    pub unsafe fn websocket_send_close(fut: *const FfiFuture, ws: *mut DynWebSocket, code: u16, buf: FfiSlice);
    pub unsafe fn websocket_send_close_masked(fut: *const FfiFuture, ws: *mut DynWebSocket, code: u16, buf: FfiSlice);
    pub unsafe fn websocket_send_ping(fut: *const FfiFuture, ws: *mut DynWebSocket, buf: FfiSlice);
    pub unsafe fn websocket_send_ping_masked(fut: *const FfiFuture, ws: *mut DynWebSocket, buf: FfiSlice);
    pub unsafe fn websocket_send_pong(fut: *const FfiFuture, ws: *mut DynWebSocket, buf: FfiSlice);
    pub unsafe fn websocket_send_pong_masked(fut: *const FfiFuture, ws: *mut DynWebSocket, buf: FfiSlice);

    pub unsafe fn init_rt() -> bool;
    pub unsafe fn has_init() -> bool;
    pub unsafe fn ffi_future_new(cb: Option<extern "C" fn(*mut c_void, *mut c_void)>, userdata: *mut c_void) -> *const FfiFuture<c_void>;
    pub unsafe fn ffi_future_state(fut: *const FfiFuture) -> u8;
    pub unsafe fn ffi_future_result(fut: *const FfiFuture<c_void>) -> *mut c_void;
    pub unsafe fn ffi_future_take_result(fut: *const FfiFuture<c_void>) -> *mut c_void;
    pub unsafe fn ffi_future_cancel(fut: *const FfiFuture);
    pub unsafe fn ffi_future_cancel_with_err(fut: *const FfiFuture, code: i32, msg: FfiSlice);
    pub unsafe fn ffi_future_complete(fut: *const FfiFuture<c_void>, result: *mut c_void);
    pub unsafe fn ffi_future_free(fut: *const FfiFuture);
    pub unsafe fn ffi_future_await(fut: *const FfiFuture);
    pub unsafe fn ffi_future_get_errno(fut: *const FfiFuture) -> i32;
    pub unsafe fn ffi_future_get_errmsg(fut: *const FfiFuture) -> *const FfiSlice;
    pub unsafe fn ffi_future_reset(fut: *const FfiFuture);
    pub unsafe fn ffi_future_get_userdata(fut: *const FfiFuture<c_void>) -> *mut c_void;
    pub unsafe fn ffi_future_set_userdata(fut: *const FfiFuture<c_void>, userdata: *mut c_void);
    pub unsafe fn rt_spawn_async_ffi_future(fut: async_ffi::FfiFuture<()>);
    
    pub unsafe fn free_slice(slice: FfiSlice);
    pub unsafe fn add_i64(x: i64, y: i64) -> i64;
    pub unsafe fn panic_test(message: *const c_char) -> !;
}


impl<T, U> FfiFuture<T, U> {
    pub fn new_raw(cb: Option<extern "C" fn(*mut c_void, *mut c_void)>, userdata: *mut U) -> *const Self {
        unsafe {
            ffi_future_new(cb, userdata as *mut c_void) as *const Self
        }
    }
    pub fn new_no_cb(userdata: *mut U) -> *const Self {
        unsafe {
            ffi_future_new(None, userdata as *mut c_void) as *const Self
        }
    }
    pub fn new_cb(cb: extern "C" fn(*mut T, *mut U), userdata: *mut U) -> *const Self {
        unsafe {
            ffi_future_new(Some(std::mem::transmute(cb)), userdata as *mut c_void) as *const Self
        }
    }
